# ai-automation-studio

./: .gitignore  BLUEPRINT-AI-STUDIO.md  CLAUDE.md  README.md  package-lock.json  package.json
src/: App.tsx  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/automation/: filters.rs  manager.rs  mod.rs  schedule_clock.rs  scheduler.rs  worker.rs
src-tauri/src/commands/: ai_system.rs  analytics.rs  automation.rs  automation_ops.rs  automation_schedule.rs  file_sort.rs  mod.rs  runtime_alerts.rs  webhook.rs  workflow.rs
src-tauri/src/db/: analytics.rs  automation.rs  automation_schedule.rs  automation_schedule_run.rs  mod.rs  runtime_alert.rs  schema.rs  settings.rs  workflow.rs
src-tauri/src/engine/: executor.rs  file_sort_integration_tests.rs  mod.rs
src-tauri/src/engine/nodes/: ai_agent.rs  code_js.rs  file_sort.rs  mod.rs  switch.rs  text_input.rs  text_output.rs  text_transform.rs  webhook_respond.rs  webhook_trigger.rs
src-tauri/src/engine/nodes/ai_agent/: analytics.rs  config.rs  mod.rs  tools.rs  tools_tests.rs
src-tauri/src/engine/nodes/ai_agent/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/file_ops/: mod.rs  sort_rule.rs  sort_rule_tests.rs
src-tauri/src/models/: automation.rs  automation_schedule.rs  mod.rs  runtime_alert.rs  workflow.rs
src-tauri/src/webhook/: manager.rs
src/lib/: aiUsage.test.ts  aiUsage.ts  analytics.ts  automationPreview.test.ts  automationPreview.ts  tauri.ts  (+19 more)
(+45 files in other folders)
