[package]
name = "synapse"
version = "0.1.0"
edition = "2021"

[lib]
name = "synapse_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
axum = "0.8"
regex = "1"
